[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chainbase_python_sdk"
readme = "README.md"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src -ra"""

[tool.coverage.report]
fail_under=90
show_missing=true