[project]
name = "chainbase_sdk"
dynamic = ["version", "description", "license", "dependencies"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src -ra"""

[tool.coverage.report]
fail_under=90
show_missing=true